--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -333,13 +333,7 @@ jobs:
           asset_name: "${{ env.BINARY }}-${{ matrix.goos }}-${{ matrix.goarch }}" # 自定义名称
   # =============================================================================================================================================================================================
   Mark-image-version:
-    needs:
-      -  Check-version,
-         Create-release,
-         Build-main-next-image,
-         Build-main-next-releases,
-         Build-dev-next-image,
-         Build-dev-next-releases
+    needs: [Check-version,Create-release,Build-main-next-image,Build-main-next-releases,Build-dev-next-image,Build-dev-next-releases]
     runs-on: ubuntu-latest
     name: "Mark the image version"
     env:
